--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "luxon": "^2.3.1",
     "method-override": "^3.0.0",
-    "morgan": "^1.10.0",
-    "uuid": "^8.3.2"
+    "mongoose": "^5.11.15",
+    "morgan": "^1.10.0"
   }
 }
