--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Lijuan Cao",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0"
